# voxel-game

./: .gitignore  .gitmodules  Cargo.toml  README.md  get_ndk.sh  link_android.py
.cargo/: config
assets/features/: world_features.json
shaders/: composite.frag  cube.frag  cube.vert  gbuffer.frag  gui.vert  lighting.frag  postprocess.frag  screenquad.vert  skybox.frag  skybox.vert  ssao.frag
src/: engine.rs  entity.rs  graphics.rs  item.rs  java_interface.rs  lib.rs  macros.rs  main.rs  mesh_object.rs  physics.rs  player.rs  terrain.rs  world.rs
src/engine/: graphics.rs  save.rs  workers.rs
src/graphics/: buffer.rs  depthbuffer.rs  framebuffer.rs  mesh.rs  resources.rs  shader.rs  skybox.rs  source.rs  texture.rs  uniform.rs  vao.rs  vbo.rs  vertex.rs
src/item/: drop.rs
src/physics/: collision.rs  physics_update.rs  vectormath.rs
src/player/: camera.rs  inventory.rs
src/terrain/: block.rs  chunk.rs  generation.rs  save.rs
src/world/: block.rs  chunk.rs  terrain.rs
