[package]
name = "voxel-game"
version = "0.1.0"
edition = "2021"

[dependencies]
gl = "*"
image = "*"
cgmath = "*"
rand = "0.7.3"
noise = "0.8.2"
splines = "4.1.1"

jni = { version = "0.5", default-features = false, optional = true }
android_log = { version = "*", optional = true }
log = { version = "*", optional = true }
egli = { version = "0.5.0", optional = true }

glfw = {version = "*", optional = true }

[lib]
name = "voxel"
crate-type = ["dylib","lib"]
required-features = ["android-lib"]

[features]
desktop-binary = ["glfw"]
android-lib = ["jni", "android_log", "log", "egli"]

[[bin]]
name = "voxel-game"
required-features = ["desktop-binary"]
